--- a/test.html
+++ b/test.html
@@ -1,15 +1,35 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Test page</title>
+        <title>My VR Family</title>
+        <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="css/styles.css">
     </head>
     <body>
-        <h1>Hey I'm a big headding</h1>
-        <p>Hey I'm a paragraph element</p>
-        <a href="https://google.com" target="_blank" title="Lets go to Google">Click me I'm a link!</a>
-        <p>Your opion is:<br>
-        WRONG!</p>
-        <img src="img/i_hav_bigger_tank.jpg">
+        <header>
+            <img src="img/Full_Family.png" alt="Full Family" style="width: 500px;height: 500px;">
+            <h1>The VrChat Family</h1>
+        </header>
+        <main>
+            <h2>About us</h2>
+            <p>We are a bunch of internet weirdos who have found each other on VRChat and is now a dysfunctional family.</p>
+            <img src="img/PartyTime.gif" alt="PartyTime" style="width: 1000px;height: 500px;" class="party">
+            <h2>Who the heck are you??</h2>
+            <img src="img/Innocence (Dad).png" alt="Innocence The Dad" class="profile">
+            <h3>Innocence the Dad</h3>
+            <p>Innocence is the dad of the group. Being the most mature person and for most of the time the most resposible.</p>
+            <img src="img/Cheeto Mr Fancy.png" alt="Cheeto Aka Mr Fancy" class="profile">
+            <h3>Cheeto aka Mr Fancy</h3>
+            <p>Cheeto is nearly always rocking a colourful avatar with tons of fancy stuff on it.</p>
+            <img src="img/Monsoon.png" alt="Monsoon Queen of headpats" class="profile">
+            <h3>Monsoon Ethanol connaisseur and Queen of headpats</h3>
+            <p>Monsoon is always giving headpats to people no matter who.<br> the fact that she is a girl makes strangers try to hit on her. However she has a girlfriend already.</p>
+            <img src="img/Metronoid.png" alt="Metronoid the something?" class="profile">
+            <h3>Metronoid #Error 404# Nothing special found.</h3>
+            <p>Metronoid is just there. Usually just hanging around with the others.</p>
+            <img src="img/Spoodle.png" alt="Spoodle the Piano Guy" class="profile">
+            <h3>Spoodle the Piano guy</h3>
+            <p>Spoodle can always be reconised in any world by his amazing piano skills. He also takes song requests.</p>
+        </main>
     </body>
 </html>
