Added Suzy to the site

--- a/test.html
+++ b/test.html
@@ -15,15 +15,18 @@
             <p>We are a bunch of internet weirdos who have found each other on VRChat and is now a dysfunctional family.</p>
             <img src="img/PartyTime.gif" alt="PartyTime" style="width: 1000px;height: 500px;" class="party">
             <h2>Who the heck are you??</h2>
-            <img src="img/Innocence (Dad).png" alt="Innocence The Dad" class="profile">
+            <img src="img/Innocence.png" alt="Innocence the Dad" class="profile">
             <h3>Innocence the Dad</h3>
-            <p>Innocence is the dad of the group. Being the most mature person and for most of the time the most resposible.</p>
+            <p>Innocence is the dad of the group. Being the most mature person and for most of the time the most responsible.</p>
+            <img src="img/Suzy.png" alt="Suzy the Mother" class="profile">
+            <h3>Suzy the Mother</h3>
+            <p>Suzy is the Mother of the group as she is always with Innocence. They are cute together.</p>
             <img src="img/Cheeto Mr Fancy.png" alt="Cheeto Aka Mr Fancy" class="profile">
             <h3>Cheeto aka Mr Fancy</h3>
             <p>Cheeto is nearly always rocking a colourful avatar with tons of fancy stuff on it.</p>
             <img src="img/Monsoon.png" alt="Monsoon Queen of headpats" class="profile">
-            <h3>Monsoon Ethanol connaisseur and Queen of headpats</h3>
-            <p>Monsoon is always giving headpats to people no matter who.<br> the fact that she is a girl makes strangers try to hit on her. However she has a girlfriend already.</p>
+            <h3>Monsoon, Ethanol connaisseur and Queen of headpats</h3>
+            <p>Monsoon is always giving headpats to people no matter who.<br> The fact that she is a girl makes strangers try to hit on her. However she has a girlfriend already.</p>
             <img src="img/Metronoid.png" alt="Metronoid the something?" class="profile">
             <h3>Metronoid #Error 404# Nothing special found.</h3>
             <p>Metronoid is just there. Usually just hanging around with the others.</p>
