--- a/test.html
+++ b/test.html
@@ -6,29 +6,31 @@
         <link rel="stylesheet" type="text/css" href="css/styles.css">
     </head>
     <body>
-        <header>
+        <header class="centered">
             <img src="img/Full_Family.png" alt="Full Family" style="width: 500px;height: 500px;">
             <h1>The VrChat Family</h1>
         </header>
-        <main>
-            <h2>About us</h2>
-            <p>We are a bunch of internet weirdos who have found each other on VRChat and is now a dysfunctional family.</p>
-            <img src="img/PartyTime.gif" alt="PartyTime" style="width: 1000px;height: 500px;" class="party">
-            <h2>Who the heck are you??</h2>
-            
+        <main class="centered">
+            <div class="centered">
+				<h2>About us</h2>
+				<p>We are a bunch of internet weirdos who have found each other on VRChat and is now a dysfunctional family.</p>
+				<img src="img/PartyTime.gif" alt="PartyTime" style="width: 1000px;height: 500px;" class="party">
+				<h2>Who the heck are you??</h2>
+            </div>
+
 			<div>
 				<!-- Innocence -->
 				<img src="img/Innocence.png" alt="Innocence the Dad" class="profile">
 				<h3>Innocence the Dad</h3>
 				<p>Innocence is the dad of the group. Being the most mature person and for most of the time the most responsible.</p>
-            </div>
+			</div>
 
 			<div>
 				<!-- Suzy -->
 				<img src="img/Suzy.png" alt="Suzy the Mother" class="profile">
 				<h3>Suzy the Mother</h3>
 				<p>Suzy is the Mother of the group as she is always with Innocence. They are cute together.</p>
-            </div>
+			</div>
 
 			<div>
 				<!-- Cheeto -->
@@ -47,7 +49,7 @@
 			<div>
 				<!-- Metronoid -->
 				<img src="img/Metronoid.png" alt="Metronoid the something?" class="profile">
-				<h3>Metronoid #Error 404# Nothing special found.</h3>
+				<h3>Metronoid <span class="error">#Error 404# Variable: special thingo not found.</span></h3>
 				<p>Metronoid is just there. Usually just hanging around with the others.</p>
             </div>
 
@@ -62,7 +64,7 @@
 				<!-- Pigskin -->
 				<img src="img/Pigskin.png" alt="Pigskin the lewd" class="profile">
 				<h3>Pigskin the lewd</h3>
-				<p>Pigskin is very lewd. He can be found in horny jail alot.</p>
+				<p>Pigskin is very lewd. He can be found in horny jail with a life sentence.</p>
 			</div>
 
 			<div>
