--- a/test.html
+++ b/test.html
@@ -35,8 +35,8 @@
 			<div>
 				<!-- Cheeto -->
 				<img src="img/Cheeto Mr Fancy.png" alt="Cheeto Aka Mr Fancy" class="profile">
-				<h3>Cheeto aka Mr Fancy</h3>
-				<p>Cheeto is nearly always rocking a colourful avatar with tons of fancy stuff on it.</p>
+				<h3>Cheeto aka Mr Fancy the Fortress builder</h3>
+				<p>Cheeto is nearly always rocking a colourful avatar with tons of fancy stuff on it. He is great at building pillow-forts.</p>
             </div>
 
 			<div>
