--- a/test.html
+++ b/test.html
@@ -21,8 +21,10 @@
 			<div>
 				<!-- Innocence -->
 				<img src="img/Innocence.png" alt="Innocence the Dad" class="profile">
-				<h3>Innocence the Dad</h3>
-				<p>Innocence is the dad of the group. Being the most mature person and for most of the time the most responsible.</p>
+				<div>
+					<h3>Innocence the Dad</h3>
+					<p>Innocence is the dad of the group. Being the most mature person and for most of the time the most responsible.</p>
+				</div>
 			</div>
 
 			<div>
@@ -49,7 +51,7 @@
 			<div>
 				<!-- Metronoid -->
 				<img src="img/Metronoid.png" alt="Metronoid the something?" class="profile">
-				<h3>Metronoid <span class="error">#Error 404# Variable: special thingo not found.</span></h3>
+				<h3>Metronoid <span class="error">#Error 404# Variable: "special thingo" not found.</span></h3>
 				<p>Metronoid is just there. Usually just hanging around with the others.</p>
             </div>
 
