--- a/test.html
+++ b/test.html
@@ -45,7 +45,7 @@
 				<!-- Monsoon -->
 				<img src="img/Monsoon.png" alt="Monsoon Queen of headpats" class="profile">
 				<h3>Monsoon, Ethanol connaisseur and Queen of headpats</h3>
-				<p>Monsoon is always giving headpats to people no matter who.<br> The fact that she is a girl makes strangers try to hit on her. However she has a girlfriend already.</p>
+				<p>Monsoon is always giving headpats to people no matter who.</p>
             </div>
 
 			<div>
