--- a/test.html
+++ b/test.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header class="centered">
-            <img src="img/Full_Family.png" alt="Full Family" style="width: 500px;height: 500px;">
+            <img src="img/Full_Family.png" alt="Full Family" style="width: 50%;height: 50%;">
             <h1>The VrChat Family</h1>
         </header>
         <main class="centered">
