Added and Edited

--- a/test.html
+++ b/test.html
@@ -53,7 +53,7 @@
 				<!-- Spoodle -->
 				<img src="img/Spoodle.png" alt="Spoodle the Piano Guy" class="profile">
 				<h3>Spoodle the Piano guy</h3>
-				<p>Spoodle can always be reconised in any world by his amazing piano skills. He also takes song requests.</p>
+				<p>Spoodle can always be reconised in any world by his amazing piano skills. He is now on his journey to different places.</p>
 			</div>
 
 			<div>
@@ -86,16 +86,36 @@
 
 			<div>
 				<!-- Nyntix prince of headpats -->
-				<img src="" alt="">
-				<h3></h3>
-				<p></p>
+				<img src="img/Nyntix.png" alt="Nyntix" class="profile">
+				<h3>Nyntix the prince of headpats</h3>
+				<p>Nyntix is addicted to headpats. He use it to help cope with being a sad boi.</p>
 			</div>
 
 			<div>
 				<!-- Olive the baby -->
-				<img src="" alt="">
-				<h3></h3>
-				<p></p>
+				<img src="img/Olive.png" alt="Olive" class="profile">
+				<h3>Olive the baby</h3>
+				<p>Olive is the youngest of us all. She is very wholesome but has a dark and lewd side to her.</p>
+			</div>
+
+			<div>
+				<!-- Lykan -->
+				<img src="img/Lykan.png" alt="Lykan" class="profile">
+				<h3>Lykan the adopted</h3>
+				<p>Lykan i from a different family that didn't treat him well. Metro and Rowan now have full custody of him and he is living much better.</p>
+			</div>
+
+			<div>
+				<!-- AugurBunny -->
+			</div>
+
+			<div>
+				<!-- Blue -->
+				<img src="img/Blue.png" alt="Blue" class="profile">
+			</div>
+
+			<div>
+				<!-- Leftra Waifu -->
 			</div>
         </main>
     </body>
